Fixed a bug where recursive call didnt have an end condition, added a font icon

--- a/about.html
+++ b/about.html
@@ -3,20 +3,19 @@
 		<a href="#/start">Forsíða</a>
 	</div>
 	<img src="images/valmynd.png" alt="valMynd" />
+	<p><b>Uppruni leiksins:</b></p>
 	<p>
 		<i>Valmynd</i> er leikur sem var búinn til sem kennsluefni fyrir 3-5 ára börn. Leikurinn var gerður fyrir áfangann<br />
 		<i>Upplýsinga- og samskiptatækni í skólakerfinu</i>,<br />í Háskólanum í Reykjavík, vorönn 2013
 	</p>
-	<p><b>Höfundar leiksins:</b></p>
-	<p>
-		Bjarni Brynjólfsson<br />
-		Guðjón Jónsson<br />
-		Matthías Leó Gíslason
-	</p>
+	<p>Höfundur leiksins er Matthías Leó Gíslason</p><br />
+
 	<p><b>Efni úr leiknum:</b></p>
 	<p>
 		Allar dýramyndir eru fengnar að láni frá <a href="http://www.123rf.com">123rf.com</a><br />
-		Grafísk hönnun er eftir Svein Björnsson
-	</p>
+		Grafísk hönnun er eftir Svein Björnsson<br />
+		Font icon-ið er búið til af <a href="https://www.flaticon.com/authors/twitter" title="Twitter">Twitter</a> fyrir <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> og er varið af <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+	</p><br />
+
 	<button ng-click="startGame()">Byrja nýjan leik</button>
 </div>
