--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="angular.min.js"></script>
 	<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+	<link rel="icon" href="letter-v.ico">
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
